simple examle for printing JSON; I am streaming over the net with dvblast, so I use the following: <pre> mkfifo my_chan multicat @239.192.23.3:2305 my_chan & dvb_print_si -x json -T eit < my_chan </pre>

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+[simon says] my 2 cents to biTStream: I need JSON input for a project, so 
+I started adding JSON printing for dvb. Trying to stick to the master
+repo as close as possible elsewhere.
 
 Welcome to biTStream!
 =====================
